--- a/duck-life-0.html
+++ b/duck-life-0.html
@@ -167,16 +167,16 @@
 <h3>Duck Life Game Series</h3>
 <ol>
 <li>
-<p><strong>Duck Life (Original)</strong><br />The first game introduces players to the core gameplay mechanics of raising and training a duck. After a farm disaster, you must train your duckling to win races and earn enough money to rebuild your farm. It focuses on running, swimming, and flying training exercises.</p>
+<p><strong><a href="https://duck-life.io">Duck Life</a> (Original)</strong><br />The first game introduces players to the core gameplay mechanics of raising and training a duck. After a farm disaster, you must train your duckling to win races and earn enough money to rebuild your farm. It focuses on running, swimming, and flying training exercises.</p>
 </li>
 <li>
-<p><strong>Duck Life 2: World Champion</strong><br />In this sequel, players aim to train their duck to become the world champion. The game expands on the original by adding more diverse environments and challenges. You can now compete across various countries, with the difficulty increasing as you progress.</p>
+<p><strong><a href="https://duck-life.io/duck-life-2">Duck Life 2</a>: World Champion</strong><br />In this sequel, players aim to train their duck to become the world champion. The game expands on the original by adding more diverse environments and challenges. You can now compete across various countries, with the difficulty increasing as you progress.</p>
 </li>
 <li>
-<p><strong>Duck Life 3: Evolution</strong><br />This installment introduces genetic modifications, allowing players to select from different duck breeds, each with unique skills and stats. The ducks evolve into specialized forms, adding more depth and strategy to the training and racing elements.</p>
+<p><strong><a href="https://duck-life.io/duck-life-3">Duck Life 3</a>: Evolution</strong><br />This installment introduces genetic modifications, allowing players to select from different duck breeds, each with unique skills and stats. The ducks evolve into specialized forms, adding more depth and strategy to the training and racing elements.</p>
 </li>
 <li>
-<p><strong>Duck Life 4</strong><br />This game offers a combination of all previous features, with improved graphics and more races, tournaments, and unlockable ducks. It brings back the core elements of training and racing but introduces new mini-games and customization options.</p>
+<p><strong><a href="https://duck-life.io/duck-life-4">Duck Life 4</a></strong><br />This game offers a combination of all previous features, with improved graphics and more races, tournaments, and unlockable ducks. It brings back the core elements of training and racing but introduces new mini-games and customization options.</p>
 </li>
 <li>
 <p><strong>Duck Life: Space</strong><br />Taking the adventure into outer space, this version challenges players to explore new planets, race in zero-gravity environments, and train their ducks with even more diverse skill sets. The game introduces new alien ducks and different environments.</p>
